[package]
name = "ttgo-playground"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { package = "esp32-hal", version = "0.15.0" }
esp-backtrace = { version = "0.8.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.6.0", features = ["esp32"] }
# Storage
esp-storage = { version = "0.3.0", features = ["esp32", "storage"] }
embedded-storage = { version = "0.3.0" }
# Display
mipidsi = "0.7.1"
embedded-graphics = "0.8.1"
display-interface-spi = "0.4.1"
embedded-hal = "0.2.7"
# Wifi
heapless = { version = "0.7" }
embedded-io = { version = "0.4.0", default-features = false }
smoltcp = { version = "0.10.0", default-features = false }
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi", branch = "main" , features = ["esp32", "utils", "wifi", "esp-now"] }
embedded-svc = { version = "0.25.3", default-features = false  }

# https://github.com/esp-rs/esp-storage/tree/main#important
[profile.dev.package.esp-storage]
opt-level = 3

# https://github.com/esp-rs/esp-wifi#optimization-level
[profile.dev.package.esp-wifi]
opt-level = 3

[profile.dev]
lto = "off"
[profile.release]
lto = "off"