[package]
name = "ttgo-playground"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32", "unstable"] }
esp-backtrace = { version = "0.19.0", features = ["esp32", "panic-handler", "println"] }
esp-println = { version = "0.17.0", features = ["esp32"] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }
critical-section = "1.2"
# Storage
esp-storage = { version = "0.9.0", features = ["esp32"] }
embedded-storage = "0.3"
# Display
mipidsi = "0.10.0"
embedded-graphics = "0.8.2"
embedded-hal = "1.0"
embedded-hal-bus = "0.3.0"

# https://github.com/esp-rs/esp-storage/tree/main#important
[profile.dev.package.esp-storage]
opt-level = 3
